# open-belex-tests

./: .gitignore  .project-root  MANIFEST.in  README.md  bitbucket-pipelines.yml  environment.yml  meson.build  meson_options.txt  pytest.ini  run-game-of-life-with-debugger.sh  setup.cfg  setup.py
src/open_belex_tests/: __init__.py  alias_method.py  harness.py  strategies.py  utils.py
src/open_belex_tests/scripts/: generate_belex_examples.py
tests/: test_belex_add_u16.py  test_belex_and_u16.py  test_belex_apl.py  test_belex_basic_tests.py  test_belex_big_expressions.py  test_belex_broadcast.py  test_belex_bug2.py  test_belex_bug3.py  test_belex_carry_cascade_1.py  test_belex_carry_cascade_2.py  test_belex_carry_cascade_3.py  test_belex_carry_cascade_4.py  test_belex_carry_cascade_5.py  test_belex_carry_cascade_6.py  test_belex_debugger.py  test_belex_dimas_adder.py  test_belex_dimas_adder2.py  test_belex_dimas_adder3.py  test_belex_dimas_adder_brian.py  test_belex_dimas_adder_reference.py  test_belex_dimas_pattern.py  test_belex_dimas_preamble.py  test_belex_dimas_preamble_reduction.py  test_belex_directed_graph.py  test_belex_exercises.py  test_belex_expressions.py  test_belex_failed_expression.py  test_belex_game_of_life.py  test_belex_glass.py  test_belex_hdc_library.py  test_belex_intermediate_representation.py  test_belex_issue_13_multi_gl_broadcasts.py  test_belex_issue_49_prevent_internal_constructor_calls.py  test_belex_issue_68_rl_from_inv_sb.py  test_belex_library.py  test_belex_libs_arithmetic.py  test_belex_literal.py  test_belex_ripple_carry_adders.py  test_belex_simple_assignment.py  test_belex_simple_assignment2.py  (+20 more)
