option('product-type', type: 'string', value: 'wnc-l4', yield: true, description: 'Product type wnc-l4 / wnc-l3')
option('enable-examples', type: 'boolean', value: false, description: 'Enable build examples')
option('external-app', type: 'boolean', value: false, description: 'Build tests as an external applications to GVML package')
option('system-version', type: 'string', value: '220.13.500.5', yield: true, description: 'GSI system package version')
option('with-baryon', type: 'boolean', value: false, description: 'Build against the Baryon target.')
option('baryon-prefix-path', type: 'string', value: '/usr/local', description: 'Installation prefix of Baryon')
