[metadata]
name = open-belex-tests
version = 1.0.1
author =
    Brian Beckman
    Dylon Edwards
author_email =
    bbeckman@gsitechnology.com
    dthomas@gsitechnology.com
description = APL compiler suite for the APU
long_description = file: README.md
long_description_content_type = text/markdown
url = https://bitbucket.org/gsitech/open-belex-tests
project_urls =
    Bug Tracker = https://bitbucket.org/gsitech/open-belex-tests/issues
classifiers =
    Programming Language :: Python :: 3
    License :: Other/Proprietary License
    Operating System :: POSIX :: Linux

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    open-belex-libs>=1.0.0,<1.0.1
    open-belex>=1.0.0,<1.0.1
    click==8.1.6
    hypothesis==6.82.0
    numpy==1.25.1
    pytest==7.4.0
tests_require =
    hypothesis==6.82.0
    pytest==7.4.0
    tox==4.6.4
scripts =
    bin/belex-test
    bin/common.sh

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    generate-belex-examples = open_belex_tests.scripts.generate_belex_examples:main
